@@ -54,6 +54,7 @@
 #undef GLIB_BYTE_CONTENTS_GRECMUTEX
 
 #undef HAVE_BROKEN_WCTYPE
+#undef HAVE_CODESET
 #undef HAVE_DOPRNT
 #undef HAVE_FLOAT_H
 #undef HAVE_GETPWUID_R
